--- a/packages/tokenizer/examples/browser/index.html
+++ b/packages/tokenizer/examples/browser/index.html
@@ -30,32 +30,8 @@
 
   <body>
     <pre id="source-code" class="markup-container" hidden>
-    <script>
-      {
-        const defaults = { darkMode: true };
-        const element = document.currentScript.parentElement;
-        const prefersColorSchemeDark = matchMedia('(prefers-color-scheme: dark)');
-        const prefersColorSchemeLight = matchMedia('(prefers-color-scheme: light)');
-        (
-          prefersColorSchemeDark.matches &&
-          !element.classList.add('prefers-dark-mode') ||
-          localStorage.darkMode == "true" ||
-          (defaults.darkMode && localStorage.lightMode != "true")
-        ) && element.classList.add('dark-mode');
-        prefersColorSchemeDark.addListener && prefersColorSchemeDark.addListener(({ matches = false }) => {
-          !matches ? (
-            element.classList.remove('prefers-dark-mode'),
-            element.classList.contains('dark-mode') && localStorage.darkMode != "true" && element.classList.remove('dark-mode')
-          ) : (
-              element.classList.add('prefers-dark-mode'),
-              !element.classList.contains('dark-mode') &&
-              localStorage.lightMode != "true" && element.classList.add('dark-mode')
-            )
-        });
-        element.hidden = false;
-      }
-    </script>
-  </pre>
+      <script src="./ui.js"></script>
+    </pre>
     <script type="module">
       import * as markup from '../markup.mjs';
       import api from './api.js';
