--- a/rich-editor/rich-editor.html
+++ b/rich-editor/rich-editor.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html frame>
   <head>
+    <title>SMotaal's &lt;rich-editor&gt; demo</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=cover"
