Refactor code-editor classes and elements (awesome)

--- a/code-editor/examples/code-editor-alpha/index.html
+++ b/code-editor/examples/code-editor-alpha/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=cover"
     />
     <!-- <link rel="stylesheet" href="./styles/code-root.css" /> -->
-    <link rel="stylesheet" href="./styles/demo.css" />
+    <link rel="stylesheet" href="../../styles/demo.css" />
   </head>
   <body>
     <main>
@@ -19,12 +19,7 @@
         class="before-code after-code indent-code"
       ></code-editor>
     </main>
-    <footer>
-      <span
-        ><b>Note</b>: this version will be moved
-        <a href="./examples/code-editor-alpha/">here</a>.</span
-      >
-    </footer>
-    <script type="module" src="./examples/code-editor-alpha/code-editor-demo.js"></script>
+    <footer>This space intentionally blank.</footer>
+    <script type="module" src="code-editor-demo.js"></script>
   </body>
 </html>
