Fix code-editor demo body sizing (source-view)

--- a/code-editor/source-review.html
+++ b/code-editor/source-review.html
@@ -28,10 +28,6 @@
         flex: 1;
         display: flex;
         margin: 0;
-        /* background-color: var(--shade, inherit); */
-        /* background-color: white; */
-
-        /* outline: 1px dotted #66f; */
       }
 
       body > main {
@@ -53,28 +49,14 @@
         border-radius: 0;
       }
 
-      /* body > main > *:first-child {
-        border-top: none;
-      }
-      body > main > *:last-child {
-        border-bottom: none;
-      } */
-
       body > main > section {
-        /* padding: 0.5rem; */
         display: grid;
-
-        /* overflow-x: scroll; */
-        /* overflow:hidden; */
-        /* will-change: transform; */
-        /* position: relative; */
       }
+
       body > main > section > source-view {
         overflow-x: scroll;
-        /* overflow-y: initial; */
         overscroll-behavior-x: contain;
-        /* height: 100%; */
-        /* overscroll-behavior-y: ; */
+        /* max-height: 90vh; */
       }
 
       body > main > center {
