--- a/examples/rich-editor/index.html
+++ b/examples/rich-editor/index.html
@@ -6,8 +6,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=cover"
     />
-    <link rel="stylesheet" href="../../styles/frame.css" />
-    <link rel="stylesheet" href="../../styles/debug.css" />
+    <link rel="stylesheet" href="../../styles/common/frame.css" />
+    <link rel="stylesheet" href="../../styles/common/debug.css" />
     <script type="module" src="./rich-editor.js"></script>
   </head>
   <body flex>
