--- a/code-editor/source-view.html
+++ b/code-editor/source-view.html
@@ -7,7 +7,6 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=cover"
     />
-    <!-- <link rel="stylesheet" href="./styles/code-root.css" /> -->
     <link rel="stylesheet" href="./styles/demo.css" />
   </head>
   <body>
@@ -26,7 +25,7 @@
           const render = (repeat = (location.hash && parseInt(location.hash.slice(1))) || 1) =>
             (sourceView.source = sourceText.repeat(repeat));
 
-          addEventListener('hashchange', () => location.reload());
+          addEventListener('hashchange', () => render());
 
           render();
         })();
