Refector loadTextFrom and loadSourceTextFrom to  helpers/fetch.js

--- a/code-editor/source-editor.html
+++ b/code-editor/source-editor.html
@@ -14,7 +14,7 @@
     <footer>This space intentionally blank.</footer>
     <script type="module">
       import './elements/source-editor.js';
-      import {renderSourceTextFrom, loadSourceTextFrom} from './helpers.js';
+      import {loadSourceTextFrom} from './helpers.js';
 
       const sourceView = document.querySelector('source-editor');
       if (sourceView) {
