--- a/code-editor/source-view.html
+++ b/code-editor/source-view.html
@@ -14,7 +14,7 @@
     <footer>This space intentionally blank.</footer>
     <script type="module">
       import './elements/source-view.js';
-      import {renderSourceTextFrom, loadSourceTextFrom} from './helpers.js';
+      import {loadSourceTextFrom} from '../lib/fetch.js';
 
       const sourceView = document.querySelector('source-view');
 
